Data generation fix