@@ -83,8 +83,13 @@ public class TestDataGenerator {
 
     public Recipe createTestRecipe(List<Ingredient> ingredients, Category category) {
         String name = selectRandom(RECIPE_NAMES);
-        List<IngredientWithAmount> ingredientsWithAmount =
-                Stream.generate(() -> createTestIngredientWithAmount(selectRandom(ingredients))).limit(5).collect(Collectors.toList());
+        List<IngredientWithAmount> ingredientsWithAmount = new ArrayList<>();
+        for (int i = 0; i < Math.min(5, ingredients.size()); i++){
+            IngredientWithAmount ingredient = createTestIngredientWithAmount(selectRandom(ingredients));
+            if (ingredientsWithAmount.stream().filter(ingredient1 -> ingredient1.getIngredient().equals(ingredient.getIngredient())).toList().size() == 0){
+                ingredientsWithAmount.add(ingredient);
+            }
+        }
         String description = "In a medium bowl, beat together egg whites, 1/4 cup butter and 1/4 teaspoon salt";
         return new Recipe(name, ingredientsWithAmount, description, random.nextInt(1, 20),
                 random.nextInt(5) + 1, category);
